# embedded-tetris-rs

./: .nextest.toml  Cargo.toml  README.md  build.rs  test.sh
.github/workflows/: deploy.yml
docs/: _headers
src/: common.rs  control.rs  digits.rs  figure.rs  lib.rs  main.rs
src/games/: mod.rs  races.rs  snake.rs  tanks.rs  tetris.rs
tetris-android/: AndroidManifest.xml  Cargo.toml  README.md  build.sh
tetris-android/.cargo/: config.toml
tetris-android/src/: lib.rs
tetris-console/: Cargo.toml
tetris-console/src/: control.rs  display.rs  main.rs
tetris-embedded/: Cargo.toml
tetris-embedded/.cargo/: config.toml
tetris-embedded/src/: control.rs  main.rs
tetris-lib/: Cargo.toml
tetris-lib/src/: common.rs  digits.rs  figure.rs  lib.rs  log.rs
tetris-lib/src/games/: life.rs  mod.rs  races.rs  snake.rs  tanks.rs  tetris.rs
tetris-wasm/: .gitignore  Cargo.toml  build.sh  index.html
tetris-wasm/src/: lib.rs
