[package]
name = "tetris-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
microbit-v2 = "0.15.1"
no_std_strings = "0.1.3"
nrf52833-hal = "0.18.0"
panic-halt = "1.0.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"
smart-leds = "0.4.0"
smart-leds-trait = "0.3.0"
ws2812-nrf52833-pwm = "0.2.1"

# [profile.release]
# panic = 'abort'

# [profile.dev]
# panic = 'abort'

[build-dependencies]
quote = "1.0.37"
no_std_strings = "0.1.3"
proc-macro2 = "1"
prettyplease = "0.2.25"
smart-leds = "0.4.0"
syn = { version = "2.0.87", features = ["full", "parsing"] }
