[package]
name = "tetris-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "tetris_rs"

[[bin]]
name = "tetris-rs"
test = false
bench = false

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1"
defmt-rtt = "1"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "task-arena-size-8192"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
smart-leds = "0.4.0"
no_std_strings = "0.1.3"


[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = 'z'

[build-dependencies]
no_std_strings = "0.1.3"
